# prediction-market-system

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  compose.yml  config.live-soak.yaml  config.live.yaml.example  config.yaml.example  fly.live.toml.example  fly.toml  pyproject.toml  schema.sql  sitecustomize.py
.data/: eval_records.jsonl  feedback.jsonl
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.harness/: config.json
.harness/cathedral-v1/: git-state.json
.harness/pms-correctness-bundle-v1/: cp28-regression-envelope.md  git-state.json
.harness/pms-v1/: spec.md
.harness/retro/: 2026-04-08-pms-phase2.md  2026-04-08-pms-v1.md  2026-04-09-pms-phase3.md  2026-04-16-pms-known-open-questions.md  2026-04-17-pms-market-data-v1.md  2026-04-17-pms-strategy-aggregate-v1.md  2026-04-18-pms-factor-panel-v1.md  2026-04-20-pms-research-backtest-v1.md  2026-04-23-cathedral-v1.md  2026-04-24-pms-markets-browser-v1.md  2026-04-28-pms-agent-strategy-plugins-v1.md  2026-05-14-strategy-live-readiness-p0.md  index.md
.review-loop/2026-04-23-cathedral-v1-readonly-review/: rounds.json  summary.md
agent_docs/: architecture-invariants.md  production-readiness-2026-05.md  project-roadmap.md  promoted-rules.md  strategy-authoring-guide.md  strategy-iteration-sop.md  worldcup-strategy-portfolio-2026-06.md
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_unit_split.py  0003_order_intents.py  0004_decisions_table.py  0005_strategies_share_metadata.py  0006_markets_price_fields.py  0007_market_price_snapshots.py  0008_market_subscriptions.py  0009_submission_unknown_outcome.py  0010_order_intent_key.py  0011_live_reconcile_audit.py  0012_order_intent_cancelled_market_resolved.py  0013_markets_live_status_fields.py  0014_strategy_artifacts.py  0015_strategy_meta_evidence.py  0016_market_relations.py  0017_eval_brier_baseline.py  0017_quote_eval_records.py  0018_strategy_run_slices.py  0019_strategy_run_slice_counts.py  0020_eval_secondary_baselines.py  0021_market_risk_metadata.py  0022_runtime_heartbeats.py  0023_backtest_execution_rows.py
benchmarks/: analytics_dashboard.yaml  arbitrage_calculator.yaml  backtesting_engine.yaml  correlation_detector.yaml  data_connector.yaml  data_normalizer.yaml  embedding_engine.yaml  order_executor.yaml  realtime_feed.yaml  risk_manager.yaml
candidates/: ent0n29_polybot.yaml  kalshi_python_async_data_connector.yaml  kalshi_python_sync_data_connector.yaml  kalshi_python_sync_order_executor.yaml  mock_connector.yaml  nautilus_trader_backtesting_engine.yaml  pmxt_arbitrage_calculator.yaml  pmxt_data_connector.yaml  pmxt_data_normalizer.yaml  pmxt_order_executor.yaml  poly_maker.yaml  prediction_market_analysis_correlation_detector.yaml  prediction_market_arbitrage_bot_arbitrage.yaml  prediction_market_arbitrage_bot_correlation.yaml  py_clob_client_data_connector.yaml  py_clob_client_order_executor.yaml  real_time_data_client.yaml  sentence_transformers.yaml
candidates/probes/: README.md  kalshi_python_sync_probe.py  pmxt_probe.ts  py_clob_client_probe.py  real_time_data_client_probe.ts  sentence_transformers_probe.py
claudedocs/: 2026-04-26-live-smoke-handoff.md  cleanup-report.md  paper-mode-smoke-2026-04-15.md
dashboard/: .gitignore  DESIGN.md  conftest.py  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
dashboard/__tests__/: FreshnessDot.test.tsx  MarketDetailDrawer.test.tsx  MarketsFilterChips.test.tsx  MarketsFilterPopover.test.tsx  MarketsPageClientSearch.test.tsx  MarketsPagination.test.tsx  MarketsPaginationIntegration.test.tsx  PriceBar.test.tsx  PriceHistoryChart.test.tsx  SubscribeStar.test.tsx  accept-idea-button.test.tsx  dashboard-client.test.tsx  decision-detail-route.test.ts  empty-state.test.tsx  event-log-drawer.test.tsx  market-detail-route.test.ts  markets-table.test.tsx  onboarding-panel.test.tsx  seed.test.ts  share-route.test.ts  stream-events-route.test.ts  today.test.tsx  upstream.test.ts  use-theme-colors.test.tsx  useMarketsFilters.test.tsx  why-popover.test.tsx
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AcceptIdeaButton.tsx  ConnectionBanner.tsx  DashboardClient.tsx  DepthLadder.tsx  EmptyState.tsx  EventLogDrawer.tsx  FactorSeriesChart.tsx  FactorSeriesChartNoSsr.tsx  FeedbackPanel.tsx  (+33 more)
docs/: analysis.md  continuation-guide.md  feeding-results-to-auto-research.md
rust/: Cargo.toml  README.md
rust/crates/datafeed/: Cargo.toml  pyproject.toml
rust/crates/datafeed/src/: lib.rs
rust/crates/embeddings/: Cargo.toml  pyproject.toml
rust/crates/embeddings/src/: lib.rs
rust/crates/executor/: Cargo.toml  pyproject.toml
rust/crates/executor/src/: lib.rs
scripts/: __init__.py  approve_first_order.py  artifact_path_safety.py  check_h1_flb_smoke.py  check_live_submission_artifacts.py  check_paper_canary_smoke.py  check_paper_soak_artifacts.py  execution_model_from_telemetry.py  export_backtest_execution_from_db.py  export_category_prior_observations.py  export_flb_warehouse_from_dune.py  export_paper_execution_from_api.py  export_to_auto_research.py  flb_data_feasibility.py  install_paper_canary_strategy.py  install_paper_multi_factor_strategy.py  install_wc_flb_tail_fade_strategy.py  migrate_jsonl_to_pg.py  paper-report.py  paper_backtest_execution_diff.py  paper_report.py  prepare_local_paper_soak_config.py  prune_market_history.py  rehearse_first_order.py  relax_default_strategy_required_factors.py  smoke_test_llm.py
tests/: _registry_target.py  conftest.py  test_accel_fallback.py  test_agent_strategy_architecture_docs.py  test_candidates.py  test_correlation.py  test_evaluation.py  test_executor.py  test_export_flb_warehouse_from_dune.py  test_export_to_auto_research.py  test_flb_data_feasibility.py  test_harness.py  test_harness_reports.py  test_kalshi.py  test_llm_correlation.py  test_models.py  test_pipeline.py  test_polymarket.py  test_risk.py  test_strategy.py  test_subprocess_runner.py
typing_fixtures/: selection_similarity_missing_denominator.py
(+682 files in other folders)
