[project]
name = "pms"
version = "0.1.0"
description = "Prediction Market System — modular trading pipeline and tool harness"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "pms maintainers" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Phase 3C: Anthropic SDK powers the optional LLM correlation refinement
# layer. Install with `uv pip install 'pms[llm]'`. The default rule-based
# CorrelationDetector does not require this; only AnthropicCorrelationClassifier
# imports it (lazily, so the rest of pms.strategy works without it).
llm = ["anthropic>=0.40.0"]

# ---------------------------------------------------------------------------
# CP03: CLI entry point — installed as `pms-harness` when the package is
# built/installed (including via `uv sync`).
# ---------------------------------------------------------------------------
[project.scripts]
pms-harness = "pms.tool_harness.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/pms"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python", "."]
asyncio_mode = "auto"
filterwarnings = ["error"]
markers = [
    "slow: marks tests as slow / integration (deselect with '-m \"not slow\"')",
    "integration: real-network/real-subprocess integration tests (deselect with '-m \"not integration\"')",
]

# ---------------------------------------------------------------------------
# mypy — strict mode is required by CP01 acceptance criteria.
# ---------------------------------------------------------------------------
[tool.mypy]
mypy_path = "python"
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_unimported = false
namespace_packages = true
explicit_package_bases = true
