[project]
name = "pms"
version = "0.1.0"
description = "Prediction Market System — modular trading pipeline and tool harness"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "pms maintainers" }]
license = { text = "MIT" }
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.110.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.30",
    "websockets>=16.0",
]

[project.scripts]
pms-api = "pms.api.__main__:main"

[project.optional-dependencies]
# CP05: Anthropic SDK powers the optional LLM forecaster. Install with
# `uv pip install 'pms[llm]'`. LLMForecaster imports it lazily, so the default
# rule-based/statistical controller path does not require it.
llm = ["anthropic>=0.40.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pms"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
filterwarnings = ["error"]
markers = [
    "slow: marks tests as slow / integration (deselect with '-m \"not slow\"')",
    "integration: real-network/real-subprocess integration tests (deselect with '-m \"not integration\"')",
]

# ---------------------------------------------------------------------------
# mypy — strict mode is required by CP01 acceptance criteria.
# ---------------------------------------------------------------------------
[tool.mypy]
mypy_path = "src"
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_unimported = false
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true
