[project]
name = "pms"
version = "0.1.0"
description = "Prediction Market System — modular trading pipeline and tool harness"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "pms maintainers" }]
license = { text = "MIT" }
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.110.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.2.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.30",
    "websockets>=16.0",
]

[project.scripts]
pms-api = "pms.api.__main__:main"
pms-live = "pms.live_cli:main"
pms-research = "pms.research.cli:main"

[project.optional-dependencies]
# CP05/P0-1: Provider SDKs power the optional LLM forecaster. Install with
# `uv pip install 'pms[llm]'`. LLMForecaster imports them lazily, so the default
# rule-based/statistical controller path does not require them.
llm = ["anthropic>=0.40.0", "openai>=1.50.0"]
live = ["py-clob-client-v2>=1.0.0,<2.0.0"]

[dependency-groups]
dev = [
    "import-linter>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pms"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
filterwarnings = ["error"]
markers = [
    "slow: marks tests as slow / integration (deselect with '-m \"not slow\"')",
    "integration: real-network/real-subprocess integration tests (deselect with '-m \"not integration\"')",
    "real_fill_store: opt out of the conftest FillStore.read_positions stub (used by tests that exercise the real implementation directly)",
]

# ---------------------------------------------------------------------------
# mypy — strict mode is required by CP01 acceptance criteria.
# ---------------------------------------------------------------------------
[tool.mypy]
mypy_path = "src"
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_unimported = false
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true

[tool.importlinter]
root_packages = ["pms"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Sensor strategy-agnostic: no aggregate import"
type = "forbidden"
source_modules = ["pms.sensor"]
forbidden_modules = ["pms.strategies.aggregate"]

[[tool.importlinter.contracts]]
name = "Actuator strategy-agnostic: no aggregate import"
type = "forbidden"
source_modules = ["pms.actuator"]
forbidden_modules = ["pms.strategies.aggregate"]

[[tool.importlinter.contracts]]
name = "Sensor + Actuator: no controller import"
type = "forbidden"
source_modules = ["pms.sensor", "pms.actuator"]
forbidden_modules = ["pms.controller"]

[[tool.importlinter.contracts]]
name = "Sensor: no market_selection import"
type = "forbidden"
source_modules = ["pms.sensor"]
forbidden_modules = ["pms.market_selection"]

[[tool.importlinter.contracts]]
name = "Actuator: no market_selection import"
type = "forbidden"
source_modules = ["pms.actuator"]
forbidden_modules = ["pms.market_selection"]

[[tool.importlinter.contracts]]
name = "Market selection: no aggregate import"
type = "forbidden"
source_modules = ["pms.market_selection"]
forbidden_modules = ["pms.strategies.aggregate"]

[[tool.importlinter.contracts]]
name = "Kalshi stub helper stays at runtime boundaries"
type = "protected"
protected_modules = ["pms.core.venue_support"]
allowed_importers = [
    "pms.sensor.adapters.historical",
    "pms.sensor.adapters.market_discovery",
    "pms.market_selection.selector",
    "pms.actuator.executor",
    "pms.actuator.adapters.paper",
    "pms.actuator.adapters.backtest",
    "pms.research.execution",
]
as_packages = false

[[tool.importlinter.contracts]]
name = "Strategy plugins: no actuator, controller, or venue adapter imports"
type = "forbidden"
source_modules = ["pms.strategies.ripple", "pms.strategies.flb"]
forbidden_modules = [
    "pms.actuator",
    "pms.actuator.adapters",
    "pms.controller",
    "py_clob_client_v2",
]
