# Rust workspace for the PMS performance-critical paths.
#
# Three crates, each shipping a PyO3 module that the Python package
# imports lazily and falls back from if the compiled artifact is not
# available. The Python implementations under ``python/pms/`` remain
# the canonical reference; the Rust crates exist purely as accelerated
# replacements behind a feature flag.
#
# Phase 3E status: scaffolded only. Each crate has a stub PyO3 module
# with a smoke `version()` function so the workspace builds end-to-end
# under maturin without depending on a real implementation. The hot
# paths (datafeed parser, executor inner loop, embedding cosine batch)
# stay TODO until a future task explicitly takes them on.
#
# Build (requires maturin + a Rust 1.78+ toolchain installed):
#
#     uv pip install maturin
#     cd rust && maturin develop --release -m crates/embeddings/Cargo.toml
#     cd rust && maturin develop --release -m crates/datafeed/Cargo.toml
#     cd rust && maturin develop --release -m crates/executor/Cargo.toml
#
# After a successful build, ``python/pms/_accel/__init__.py`` will set
# the matching ``HAS_*_RS`` flag at import time and accelerated code
# paths become available transparently. See ``rust/README.md`` for the
# fallback wiring pattern.
[workspace]
resolver = "2"
members = [
    "crates/datafeed",
    "crates/executor",
    "crates/embeddings",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["pms maintainers"]
repository = "https://github.com/stone16/prediction-market-system"
