[package]
name = "pms_datafeed_rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rust acceleration for the PMS data-feed normalization hot path."

[lib]
name = "pms_datafeed_rs"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.22", optional = true }
